# portable-bci

./: .gitignore  .gitmodules  README.md  download_data.sh  model.json  move_datasets.sh
cpp_env/wasm_env/: CMakeLists.txt  CMakePresets.json  readme.md
cpp_env/wasm_env/Geometry/: CMakeLists.txt
cpp_env/wasm_env/Geometry/include/Riemann/: riemann.h
cpp_env/wasm_env/Geometry/src/: CMakeLists.txt  riemann.cpp
cpp_env/wasm_env/Kernel/: CMakeLists.txt
cpp_env/wasm_env/Kernel/include/: ArrayBuffer.h  RiemannKernel.h  Timeseries.h  Timetensor.h  main.h  template_typedefs.h
cpp_env/wasm_env/Kernel/include/json/: json.hpp
cpp_env/wasm_env/Kernel/src/: ArrayBuffer.cpp  CMakeLists.txt  RiemannKernel.cpp  Timeseries.cpp  Timetensor.cpp  main.cpp
cpp_env/wasm_env/Kernel/src/webidl/: glue.cpp  glue.js  readme.md  webidl.idl
node_env/: main.js  package.json  readme.md
node_env/evaluation/: experiment_meanMetricRuntimes.js  experiment_metadata.js  experiment_noTransfer.js  experiment_transferBaseline.js  readme.md  run_eval.js  test_runs.js
node_env/evaluation/benchmarks/: crossSubjectAndCrossSession_1657620236523.json  crossSubjectAndCrossSession_percentilesGridSearch_1657624722765.json  crossSubjectAndCrossSession_percentilesGridSearch_1657635844546.json  crossSubjectDataAugmentedRetraining_1656690902742.json  dimRankingSubjectTransfer_0.2percentile_1657563068236.json  dimRankingSubjectTransfer_0.2percentile_1657567100275.json  dimRankingSubjectTransfer_perrcentilesGridSearch_1657561969111.json  dimRankingSubjectTransfer_perrcentilesGridSearch_1657563416730.json  evaluateResults.js  hdcHRR_retrain_rerun_1657460314065.json  hdcRiemannCiM_1656326660212.json  meanMetricAccuracies_15_06.json  noTransfer_17_06.json  onlineCrossSessionAdaption_noRiemannRefChange_12its_0-01lr_1657115143193.json  onlineCrossSessionAdaption_noRiemannRefChange_12its_0-01lr_1657116031000.json  onlineCrossSessionAdaption_noRiemannRefChange_12its_0-01lr_1657120450204.json  onlineCrossSessionAdaption_noRiemannRefChange_12its_0-01lr_1657131637883.json  onlineCrossSubjectNaive_1657196081063.json  readme.md  (+12 more)
node_env/scripts/: export_data.js
node_env/webapp_port/: experiment_edgeAdaption.js  experiment_hdcEdgeAdaption.js  experiment_meanMetricRuntimes.js  run_eval.js  test_deepconvnet.js
py_env/custom_workspace/: a_benchmark.py  a_export.py  main.py  readme.md
watch_webapp/: .eslintrc.js  README.md  config.xml  index.html  jsconfig.json  package.json
watch_webapp/benchmarks/: eegnet_transferlearning12epochs.txt  riemannmeans.py
watch_webapp/config/: index.js
watch_webapp/src/: App.vue  main.js
(+310 files in other folders)
